WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54005
ASSERTION FAILURE: ASSERT_NOT_REACHED() in Connection::writeEventHandler() after the Web Process crashes
https://bugs.webkit.org/show_bug.cgi?id=54005
Summary
ASSERTION FAILURE: ASSERT_NOT_REACHED() in Connection::writeEventHandler() af...
Jessie Berlin
Reported
2011-02-08 08:03:43 PST
In ConnectionWin's Connection::writeEventHandler(), the error returned from ::GetLastError is ERROR_BROKEN_PIPE. This is pretty logical, since the Web Process just crashed. We should handle this case by calling connectionDidClose() and returning.
Attachments
Patch
(1.33 KB, patch)
2011-02-08 08:08 PST
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2011-02-08 08:06:25 PST
<
rdar://problem/8971458
>
Jessie Berlin
Comment 2
2011-02-08 08:08:01 PST
Created
attachment 81637
[details]
Patch
Jessie Berlin
Comment 3
2011-02-08 08:35:12 PST
Comment on
attachment 81637
[details]
Patch Committed in
r77942
http://trac.webkit.org/changeset/77942
WebKit Review Bot
Comment 4
2011-02-08 08:59:13 PST
http://trac.webkit.org/changeset/77942
might have broken Qt Linux Release The following tests are not passing: http/tests/websocket/tests/workers/close-in-onmessage-crash.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug