ASSERTION FAILURE: ASSERT_NOT_REACHED() in Connection::writeEventHandler() after the Web Process crashes. https://bugs.webkit.org/show_bug.cgi?id=54005

Reviewed by Adam Roben.

* Platform/CoreIPC/win/ConnectionWin.cpp:
(CoreIPC::Connection::writeEventHandler):
Handle ERROR_BROKEN_PIPE by calling connectionDidClose() and returning early.



git-svn-id: svn://svn.chromium.org/blink/trunk@77942 bbb929c8-8fbe-4397-9dbb-9b2b20218538