third_party/WebKit/Source/WebKit2/Platform/CoreIPC/win/ConnectionWin.cpp
@@ -243,6 +243,10 @@ void Connection::writeEventHandler()
             // FIXME: We should figure out why we're getting this error.
             return;
         }
+        if (error == ERROR_BROKEN_PIPE) {
+            connectionDidClose();
+            return;
+        }
         ASSERT_NOT_REACHED();
     }
 
